fix slide z-index

--- a/css/style.css
+++ b/css/style.css
@@ -1149,11 +1149,13 @@ input.form-control {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 .swiper-wrapper {
     height: 100%;
     display: flex !important;
+    position: relative;
     /* บังคับให้เป็น Flex */
 }
 
@@ -1166,11 +1168,13 @@ input.form-control {
     flex-shrink: 0;
     opacity: 0.5;
     transition: opacity 0.3s ease, transform 0.3s ease;
+    z-index: 1;
 }
 
 .swiper-slide-active {
     opacity: 1;
     /* ทำให้รูปตรงกลางชัดเจน */
+    z-index: 2;
 }
 
 .swiper-slide img {
